tests/transpiler/x/hs/join_multi.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/join_multi.hs:31:26: error:
    Variable not in scope: name
    Suggested fix:
      Notice that ‘name’ is a field selector belonging to the type ‘GenType1’
      that has been suppressed by NoFieldSelectors.
   |
31 | result = [Map.fromList [(name, c.name), (sku, i.sku)] | o <- orders, c <- customers, i <- items, o.customerId == c.id && o.id == i.orderId]
   |                          ^^^^

/workspace/mochi/tests/transpiler/x/hs/join_multi.hs:31:42: error:
    Variable not in scope: sku
    Suggested fix:
      Notice that ‘sku’ is a field selector belonging to the type ‘GenType3’
      that has been suppressed by NoFieldSelectors.
   |
31 | result = [Map.fromList [(name, c.name), (sku, i.sku)] | o <- orders, c <- customers, i <- items, o.customerId == c.id && o.id == i.orderId]
   |                                          ^^^

/workspace/mochi/tests/transpiler/x/hs/join_multi.hs:37:9: error:
    • Couldn't match type ‘[]’ with ‘IO’
      Expected: IO Char
        Actual: [Char]
    • In a stmt of a 'do' block:
        putStrLn show r.name ++ " " ++ "bought item" ++ " " ++ show r.sku
      In the expression:
        do putStrLn show r.name
             ++ " " ++ "bought item" ++ " " ++ show r.sku
      In the first argument of ‘mapM_’, namely
        ‘(\ r
            -> do putStrLn show r.name
                    ++ " " ++ "bought item" ++ " " ++ show r.sku)’
   |
37 |         putStrLn show r.name ++ " " ++ "bought item" ++ " " ++ show r.sku
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/join_multi.hs:37:18: error:
    • Couldn't match type: a0 -> String
                     with: [Char]
      Expected: String
        Actual: a0 -> String
    • Probable cause: ‘show’ is applied to too few arguments
      In the first argument of ‘putStrLn’, namely ‘show’
      In the first argument of ‘(++)’, namely ‘putStrLn show r.name’
      In a stmt of a 'do' block:
        putStrLn show r.name ++ " " ++ "bought item" ++ " " ++ show r.sku
   |
37 |         putStrLn show r.name ++ " " ++ "bought item" ++ " " ++ show r.sku
   |                  ^^^^
